full support for running node dependencies inside volume, with source in local host directory

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 ridefinder:
   build: .
-  command: echo 'ready'
+  ports:
+    - '47000:8080'
   volumes:
     - .:/home/app/ridefinder
-  
+    - /home/app/ridefinder/node_modules  
