--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "leaflet": "^1.0.3",
     "mapbox-gl": "^0.38.0",
     "underscore": "^1.8.3",
-    "vue": "^2.3.3"
+    "vue": "^2.3.3",
+    "axios": "^0.18.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
